# sharp2DQR

./: .gitmodules  CMakeLists.txt  README.md
inc/abc_interface/: abc_interface.hpp
inc/algo/: algo.hpp
inc/common/: circuit.hpp  dqcir.hpp  sparse_int.hpp  utils.hpp  verilog.hpp
src/: main.cpp
src/abc_interface/: abc_reach.cpp
src/algo/: algo.cpp  algo_misc.cpp  dd_component.cpp  dd_graph_closure.cpp  dd_phi.cpp  dd_projected_graph.cpp  enumerate_skolem_on_component.cpp  get_candidate.cpp
src/common/: circuit.cpp  dqcir.cpp  dqcir_parser.cpp  sparse_int.cpp  utils.cpp  verilog.cpp
